--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,39 +4,37 @@
     font-weight: 400;
 
     color-scheme: light;
-    color: rgba(255, 255, 255, 0.87);
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     /*-webkit-font-smoothing: antialiased;*/
     -moz-osx-font-smoothing: grayscale;
+
+    --primary-btn-bg-colour: darkslategrey;
+    --primary-btn-bg-colour-hover: #3f5f5f;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
     min-width: 320px;
     min-height: 100vh;
     background-color: white;
+    color: black;
 }
 
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
+.page-content {
+    margin-left: auto;
+    margin-right: auto;
 }
 
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-
-button:hover {
-    border-color: #646cff;
+@media (min-width: 1280px) {
+    .page-content {
+        max-width: 1200px;
+    }
 }
