--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,11 @@
 
     --primary-btn-bg-colour: darkslategrey;
     --primary-btn-bg-colour-hover: #3f5f5f;
+    --charcoal-colour: #414144;
+    --charcoal-colour-disabled: #41414492;
+    --gray-colour-1: #f2f2f2;
+    --gray-colour-2: #e7e7e7;
+    --radius-small: 4px;
 }
 
 * {
