--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -38,7 +38,7 @@
     border-radius: 8px;
     border: none;
     padding: 0.5rem 0.75rem;
-    background-color: darkslategrey;
+    background-color: var(--primary-btn-bg-colour);
     color: white;
     font-weight: 500;
     line-height: 1.5;
