--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,13 +10,18 @@
     /*-webkit-font-smoothing: antialiased;*/
     -moz-osx-font-smoothing: grayscale;
 
+    --primary-colour: darkslategrey;
     --primary-btn-bg-colour: darkslategrey;
     --primary-btn-bg-colour-hover: #3f5f5f;
     --charcoal-colour: #414144;
     --charcoal-colour-disabled: #41414492;
     --gray-colour-1: #f2f2f2;
     --gray-colour-2: #e7e7e7;
+    --gray-colour-3: #b8bdc8;
+    --red-1: #cd1a1a;
+    --red-2: #9c1e1e;
     --radius-small: 4px;
+    --radius-medium: 8px;
 }
 
 * {
