--- a/frontend/src/routes/_app/challenges/$challengeId/-components/Leaderboard/leaderboard.css
+++ b/frontend/src/routes/_app/challenges/$challengeId/-components/Leaderboard/leaderboard.css
@@ -4,7 +4,7 @@
 
 .leaderboard-wrapper {
     border-radius: var(--radius-small);
-    border: 1px solid #b8bdc8;
+    border: 1px solid var(--gray-colour-3);
     width: auto;
 }
 
@@ -14,7 +14,7 @@
     width: 100%;
 }
 
-.leaderboard td, th {
+.leaderboard td, .leaderboard th {
     border: none;
     text-align: left;
     vertical-align: middle;
