--- a/frontend/src/routes/_auth/-components/login.css
+++ b/frontend/src/routes/_auth/-components/login.css
@@ -12,7 +12,7 @@
     width: 100%;
     max-width: 360px;
     border-radius: 6px;
-    border: 2px solid whitesmoke;
+    border: 2px solid #ccc;
     padding: 1rem 2rem;
 }
 
@@ -52,7 +52,7 @@
 
 .login-form-control input {
     border-radius: 4px;
-    border: 1px solid whitesmoke;
+    border: 1px solid var(--gray-colour-3);
     padding: 0.5rem 0.75rem;
     line-height: 1;
 }
