--- a/frontend/src/components/form/FileDropzone/file-dropzone.css
+++ b/frontend/src/components/form/FileDropzone/file-dropzone.css
@@ -20,6 +20,7 @@
     border: 2px dashed lightgray;
     cursor: pointer;
     margin-bottom: 1rem;
+    background-color: white;
 }
 
 .dropzone:hover {
@@ -55,6 +56,7 @@
     border-radius: 4px;
     border: 2px solid var(--gray-colour-2);
     padding: 1rem 1rem;
+    background-color: white;
 }
 
 .uploaded-files-list h4 {
@@ -69,7 +71,8 @@
     border-radius: 4px;
     /*border: 2px solid #9b9c99;*/
     padding: 0.25rem 1rem;
-    background-color: #fafafa;
+    background-color: var(--white-1);
+    border: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 .file-info .left-container {
@@ -114,4 +117,6 @@
     width: 2.2rem;
 }
 
-
+.hidden {
+    display: none;
+}
