--- a/frontend/src/routes/admin/-components/SubmissionList/submission-list.css
+++ b/frontend/src/routes/admin/-components/SubmissionList/submission-list.css
@@ -6,6 +6,7 @@
     border-radius: var(--radius-small);
     border: 1px solid var(--gray-colour-3);
     width: auto;
+    background-color: white;
 }
 
 .sub-list {
@@ -40,7 +41,7 @@
 }
 
 .sub-list tbody tr:hover {
-    background-color: #f7f7f7;
+    background-color: var(--white-2);
 }
 
 .sub-list tbody tr:last-child {
